# marineconnect-chatbot

./: .gitignore  pyproject.toml  server.py
app/: config.py
app/Http/Middleware/: authenticate.py
app/auth/: dependencies.py  jwt.py  routes.py
app/db/: database.py
app/langchain/: data_extractor.py  llm.py  qa_chain.py
app/models/: chat.py  manual.py  personal_access_tokens.py  user.py  vendor.py
app/routes/: ingest.py  protected.py  qa.py
app/services/: db_service.py  document_loader.py  embedding_model.py  qdrant_vectordb.py  text_splitter.py
app/utils/: image_to_text.py  logger.py  qdrant_client.py
