[tool.poetry]
name = "maritime-connect"
version = "0.1.0"
description = ""
authors = ["Mudit Gulgulia <gulgulia17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
python-jose = "^3.5.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = "^2.11.7"
python-dotenv = "^1.1.1"
python-multipart = "^0.0.20"
langchain = "^0.3.27"
langchain-openai = "^0.3.28"
pymysql = "^1.1.1"
langchain-qdrant = "^0.2.0"
qdrant-client = "^1.15.0"
langchain-community = "^0.3.27"
pymupdf = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
